# shapiro

./: .coveragerc  .gitignore  .landscape.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  dev_requirements.txt  jenkins.sh  requirements.txt  setup.cfg  setup.py  tox.ini
data/: de_restaurant_single_feedback.txt  de_restauranteering.csv  de_restauranteering_data.csv  en_restaurant_single_feedback.txt  en_restauranteering.csv  en_restauranteering_data.csv
docs/: Makefile  conf.py  development.rst  index.rst  tutorial.rst  usage.rst
src/shapiro/: __init__.py  analysis.py  commandline.py  common.py  language.py  preprocess.py  shacount.py  shalex.py  skeleton.py  tools.py
src/shapiro/lexicons/: emoticons_lexicon.csv
tests/: conftest.py  test_analysis.py  test_commandline.py  test_common.py  test_language.py  test_preprocess.py  test_shalex.py  test_skeleton.py  test_tools.py
tests/data/: restaurant_feedback.txt
