# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = shapiro
description = lexicon based sentiment analysis
author = Thomas Aglassinger
author-email = roskakori@users.sourceforge.net
license = mit
url = http://...
long-description = file: README.rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Text Processing :: Linguistic

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires = spacy
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install shapiro[PDF]` like:
# PDF = ReportLab; RXP

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
addopts =
    --cov shapiro --cov-report html
    --junitxml junit.xml --verbose
norecursedirs =
    dist
    build
    .tox

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
# Our package is pure-python.
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
#ignore = E226,E302,E41
max-line-length = 120
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.0.3
package = shapiro
extensions =
    travis
    pre_commit
    tox
